--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,64 +1,85 @@
 .profile-container {
-    margin-top: 3rem;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    flex-wrap: wrap;
-    background-color: #eed0d0;
-    padding-bottom: 2rem;
+  margin-top: 3rem;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  background-color: #eed0d0;
+  padding-bottom: 2rem;
 }
 
-.profile-user-details{
-    padding-top: 1rem;
-    width: fit-content;
-    font-weight: 600;
+.profile-user-details {
+  padding-top: 1rem;
+  width: fit-content;
+  font-weight: 600;
 }
 
-.profile-user-details img{
-    margin-bottom: 2rem;
+.profile-user-details img {
+  margin-bottom: 2rem;
 }
 
-.profile-user-details button{
-    border-radius: 5px;
-    margin-right: .5rem;
-    padding: 2px;
-    background-color: rgb(236, 232, 232)
+.profile-button {
+  margin-right: 5px;
+  background-color: #ea4c89;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.8rem;
+  font-weight: 600;
+  height: 40px;
+  line-height: 20px;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+}
+
+.profile-button:hover,
+.profile-button:focus {
+  background-color: #f082ac;
 }
 
 /* --- Previous Orders Container ---*/
 
-.previous-orders{
-    background-color: rgb(243, 240, 240);
-    margin-top: 1.5rem;
-    padding: 1rem;
-    width: fit-content;
-    min-width: 25rem;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border-radius: 5px;
+.previous-orders {
+  background-color: rgb(243, 240, 240);
+  margin-top: 1.5rem;
+  padding: 1rem;
+  width: fit-content;
+  min-width: 25rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 5px;
 }
 
 .previous-orders div {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2rem;
-    margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  margin-bottom: 1rem;
 }
 .previous-orders div p {
-    margin: auto 0;
+  margin: auto 0;
 }
 
 .previous-orders button {
-    border-radius: 5px;
-    background-color: rgb(245, 153, 114);
+  border-radius: 5px;
+  background-color: rgb(245, 153, 114);
 }
 
-.previous-orders h4{
-    font-weight: 600;
-    margin-bottom: 1rem;
+.previous-orders h5 {
+  font-weight: 600;
+  margin-bottom: 1rem;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px ;
+  box-shadow: 0 3px 5px -5px #333;
 }
 
-.previous-orders ul{
-    padding: 0;
+.previous-orders ul {
+  padding: 0;
 }
-
